# librime-msgpack

./: CMakeLists.txt  LICENSE  README.md  rime_msgpack_console.cc
src/: msgpack_module.cc  rime_ipc.h  rime_msgpack.h  rime_msgpack_api.h
